# aoc-2020

./: .gitignore  dune  fixture.ml  opam.deps  rad.ts  readme.md
day1/: day1bin.ml  dune  lib.ml  test.ml.bak
day2/: day2bin.ml  day2lib.ml  dune
day3/: bin.ml  day3bin.ml  day3lib.ml  dune  lib.ml  soln.md  test.ml
day4/: bin.ml  day4bin.ml  day4lib.ml  day4test.ml.bak  dune  lib.ml
day5/: bin.ml  day5bin.ml  day5lib.ml  day5test.ml  dune  lib.ml  test.ml
day6/: bin.ml  dune  fixture.ml  index.md  lib.ml  test.ml
