(rule
 (targets fixture.ml)
 (deps ../fixture.ml)
 (action (copy %{deps} %{targets})))

(executable
 (name day1bin)
 (modules day1bin)
 (libraries day1lib))

(library
 (modules fixture day1lib)
 (name day1lib)
 (libraries containers))

; (tests
;  (names test)
;  (modules test)
;  (libraries alcotest lib))

(alias
 (name runtest)
 (deps test.exe))
