(rule
 (targets fixture.ml)
 (deps ../fixture.ml)
 (action (copy %{deps} %{targets})))

(executable
 (name day2bin)
 (modules day2bin)
 (libraries day2lib))

(library
 (modules fixture day2lib)
 (name day2lib)
 (libraries containers pcre))

; (tests
;  (names test)
;  (modules test)
;  (libraries alcotest lib))

(alias
 (name runtest)
 (deps test.exe))
