(rule
 (targets fixture.ml)
 (deps ../fixture.ml)
 (action (copy %{deps} %{targets})))

(executable
 (name day3bin)
 (modules day3bin)
 (libraries day3lib))

(library
 (modules fixture day3lib)
 (name day3lib)
 (libraries base))

(tests
 (names day3test)
 (modules day3test)
 (libraries alcotest day3lib))

(alias
 (name runtest)
 (deps day3test.exe))
