(executable
 (name bin)
 (modules bin)
 (libraries lib)
 (preprocess (pps ppx_jane ppx_deriving.show)))

(library
 (modules fixture lib)
 (name lib)
 (libraries base pcre str)
 (preprocess (pps ppx_jane ppx_deriving.show)))

(tests
 (names test)
 (modules test)
 (libraries alcotest lib)
 (preprocess (pps ppx_jane ppx_deriving.show)))

(alias
 (name runtest)
 (deps test.exe))

