(rule
 (targets fixture.ml)
 (deps ../fixture.ml)
 (action (copy %{deps} %{targets})))

(executable
 (name day4bin)
 (modules day4bin)
 (libraries day4lib)
 (preprocess (pps ppx_jane ppx_deriving.show)))

(library
 (modules fixture day4lib)
 (name day4lib)
 (libraries base pcre str)
 (preprocess (pps ppx_jane ppx_deriving.show)))

; (tests
;  (names day4test)
;  (modules day4test)
;  (libraries alcotest day4lib))

(alias
 (name runtest)
 (deps day4test.exe)
 )
