(rule
 (targets fixture.ml)
 (deps ../fixture.ml)
 (action (copy %{deps} %{targets})))

(executable
 (name day5bin)
 (modules day5bin)
 (libraries day5lib))

(library
 (modules fixture day5lib)
 (name day5lib)
 (libraries base containers))

(tests
 (names day5test)
 (modules day5test)
 (libraries alcotest day5lib))

(alias
 (name runtest)
 (deps day5test.exe))
