(rule
 (targets fixture.ml)
 (deps ../fixture.ml)
 (action (copy %{deps} %{targets})))

(executable
 (name bin)
 (modules bin)
 (libraries lib))

(library
 (modules fixture lib)
 (name lib)
 (libraries base containers))

(tests
 (names test)
 (modules test)
 (libraries alcotest lib))

(alias
 (name runtest)
 (deps test.exe))
